# Nonagon

./: .dockerignore  .editorconfig  .env.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.bot  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.do/: app.yaml
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml
app/api/: main.py
app/bot/: config.py  database.py  main.py
app/bot/cogs/: BaseCog.py  GuildCog.py  GuildJoinCog.py  ListnerCog.py  PlayerCog.py
app/bot/models/: CharacterModel.py  DungeonMasterModel.py  DungeonMasterSummary.py  PlayerModel.py  QuestModel.py  QuestSummaryModel.py  UserModel.py
docs/: API.md  BOT.md  PRD.md  architecture.md  bot-smoketest.md  discord.md  dm-wizard-style.md  index.md  moderation.md
docs/presentations/: bot-slash-command-plan.md
scripts/: convert_indent_to_tabs.py  dev_setup.py  ensure_spaces.py  ensure_tabs.py  reset_demo.py
scripts/migrations/: backfill_guild_id.py
src/app/: __init__.py  main.py
src/app/api/: deps.py  main.py  mappers.py  schemas.py  security.py  server.py
src/app/api/routers/: admin.py  auth.py  characters.py  demo.py  quest.py  quests.py  summaries.py  summary.py  user.py  users.py
src/app/bot/: __init__.py  client.py  config.py  database.py  main.py  settings.py
src/app/bot/character/: sessions.py  utils.py
src/app/bot/cogs/: AdminCommandsCog.py  CharacterCommandsCog.py  DMCommandsCog.py  DMHandlerCog.py  (+21 more)
src/app/discord_bot/: client.py  config.py
src/app/domain/: id_utils.py
src/app/infra/: db.py  id_counter.py  lifecycle.py  quests_repo.py  serialization.py  settings.py  summaries_repo.py  users_repo.py
tests/: GuildCog.py
tests/api/: conftest.py  test_admin_api.py  test_characters_api.py  test_health_demo.py  test_quests.py  test_quests_api.py  test_summaries_api.py  test_users.py  test_users_api.py
tests/bot/: test_guild_adapter.py  test_lookup_cog_utils.py  test_nudge_logging.py  test_quest_commands_ephemeral.py  test_quest_embeds.py
tests/discord_bot/: test_bot_settings_service.py  test_general_cog.py  test_ingest_failures.py  test_membership_services.py  test_quest_pipeline.py  test_summaries_pipeline.py
tests/domain/: conftest.py
tests/domain/models/: test_QuestModel.py  test_SummaryModel.py  test_UserModel.py  test_character_model.py  test_draft_publish_flow.py  test_entity_id_model.py  test_lookup_model.py  test_quest_model.py  test_summary_model.py  test_user_model.py
tests/domain/summary/: test_adventure_summary.py
tests/domain/usecases/: test_user_unit_async.py
tests/infra/: conftest.py  test_lookup_repo.py  test_quests_repo.py  test_repo_integration.py  test_serialization.py  test_users_repo.py
(+170 files in other folders)
